[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "openstack-inventory-sync"
version = "0.1.0"
description = "Synchronize OpenStack inventory into MySQL for downstream APIs."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "OpenStack Inventory Sync Maintainers" }]
dependencies = [
  "alembic>=1.13",
  "openstacksdk>=4.0",
  "PyMySQL>=1.1",
  "python-dotenv>=1.0",
  "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
openstack-inventory-sync = "openstack_inventory_sync.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openstack_inventory_sync"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["openstack_inventory_sync"]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
addopts = "--cov=openstack_inventory_sync --cov-report=term-missing"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["openstack_inventory_sync"]

[tool.coverage.report]
show_missing = true
skip_covered = true
